--- a/style.css
+++ b/style.css
@@ -66,11 +66,9 @@ h3{
 }
 
 .buttonIndex{
-    float: left;
-    margin-top: 30px;
-    margin-left: 75px;
+    margin: auto;
     background: linear-gradient(to bottom, darkgoldenrod, goldenrod, white 80%);
-    display: inline-flex;
+    display: inline-block;
     align-items: center;
     justify-content: center;
     padding: 16px 86px 18px 72px;
@@ -104,4 +102,14 @@ header{
     width: 100%;
     height:150px;
     opacity: 85%;
+}
+
+#table{
+    display: table;
+    margin: 10px auto;
+}
+
+ul#horizontalList li{
+    display: inline;
+    padding-right: 100px;
 }
