--- a/style.css
+++ b/style.css
@@ -28,16 +28,15 @@ h1 {
 
 h2{
     margin-left: 10px;
-    margin-top: 0;
-    display: flex;
-    margin-right: auto;
+    margin-top: -10px;
     font-family: "Good boy", sans-serif;
-    font-size: 40px;
-    justify-content: left;
+    font-size: 60px;
+    display: block;
     background: linear-gradient(to bottom,black 1%, darkgoldenrod, goldenrod, white 80%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     padding-bottom: 10px;
+    position: absolute;
 }
 
 h3{
@@ -88,9 +87,9 @@ h3{
     position: fixed;
     top: 0;
     width: 100%;
-    height: 60px;
-    opacity: 1;
-    background-color: cyan;
+    height: 100px;
+    opacity: 45%;
+    background-color: black;
 }
 
 header{
@@ -112,4 +111,8 @@ header{
 ul#horizontalList li{
     display: inline;
     padding-right: 50px;
+}
+
+body{
+    background: linear-gradient(90deg, #CDB7F6 , #FFEFFF, #B19CD9);
 }
