--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ h1 {
 h2{
     margin-left: 10px;
     margin-top: -10px;
+    z-index: 10001;
+    position: fixed;
     font-family: "Good boy", sans-serif;
     font-size: 60px;
     display: block;
@@ -36,7 +38,7 @@ h2{
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     padding-bottom: 10px;
-    position: absolute;
+
 }
 
 h3{
@@ -83,7 +85,7 @@ h3{
 
 .header2{
     margin-left: -8px;
-    overflow: hidden;
+    z-index: 10000;
     position: fixed;
     top: 0;
     width: 100%;
