Edited so now clicking the image flips the card instead of title

--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ p{
     font-size: 20px;
     text-align: left;
     margin-left: 10px;
-    color: black;
+    color: white;
 }
 #dog1{
     -webkit-text-fill-color: goldenrod;
