Added the dog description to each dog

--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ table {
 }
 
 #Labrador{
-    background: linear-gradient(to right, yellowgreen, yellow, greenyellow);
+    background: linear-gradient(to right, yellowgreen, greenyellow);
 }
 
 #Dachshund{
