--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ ul#horizontalList li{
 }
 
 body{
-    background: linear-gradient(90deg, #CDB7F6 , #FFEFFF, #B19CD9);
+    background: linear-gradient(90deg, #CDB7F6, #B19CD9);
 }
 
 ul {
@@ -163,7 +163,7 @@ table {
 }
 
 #dogs{
-    height: 2500px;
+    height: 1500px;
 }
 
 .title{
@@ -284,3 +284,19 @@ p{
     -webkit-text-stroke-color: darkred;
 
 }
+
+.bookingButton{
+    margin-top: 20px;
+    float: left;
+    margin-left: 200px;
+}
+
+#companyInfo{
+    text-align: center;
+    margin-top: 125px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 40px;
+    color: white;
+}
+
