--- a/leaflet.css
+++ b/leaflet.css
@@ -646,7 +646,7 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	margin-top: 100px;
 	width : 700px;
 	height: 600px;
-	border: 5px solid;
+	border: 2px solid black;
 	border-radius: 10px 10px 10px 10px;
 }
 
