--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: 'Good boy';
     src: url('fonts/Goodboy.woff2') format('woff2'),
-    url('fonts/Goodboy.woff') format('woff');
+         url('fonts/Goodboy.woff') format('woff'),
+         url('fonts/Goodboy.ttf')  format('truetype');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
