--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/*
+My style Sheet for dog rental website
+Shay Stevens
+ */
+
+/*Font style*/
 @font-face {
     font-family: 'Good boy';
     src: url('fonts/Goodboy.woff2') format('woff2'),
@@ -8,6 +14,7 @@
     font-display: swap;
 }
 
+/* Style for admin link on index page*/
 #adminAvatar{
     width: 50px;
     height: 50px;
@@ -15,6 +22,18 @@
     margin-right: 10px;
     float: right;
 }
+
+#adminHeader{
+    margin-right: 5px;
+    margin-top: -120px;
+    font-family: sans-serif;
+    background: linear-gradient(to bottom, darkgoldenrod, goldenrod);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    float: right;
+}
+
+/* Index header style*/
 h1 {
     text-align: left;
     font-family: "Good boy", sans-serif;
@@ -27,6 +46,49 @@ h1 {
     padding-bottom: 10px;
 }
 
+/* Index body style */
+.body{
+    background-image: url("images/pexels-anna-shvets-4588013.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+}
+
+/* Index header style */
+header{
+    margin-left: -8px;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height:150px;
+    opacity: 85%;
+    z-index: -1;
+}
+
+/* Style for index header anchor */
+.indexHeaderA{
+    background: linear-gradient(to bottom, lightgray, white 35%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    display: inline-block;
+    height: 80px;
+    font-size: 60px;
+    padding-right: 60px;
+    padding-top: 10px;
+    font-family: "Good boy", sans-serif;
+}
+
+.ah2{
+    text-decoration: none;
+    margin-right: 10px;
+    justify-content: left;
+    display:inline-block;
+    width:250px;
+}
+
+/* Header style for h2 and anchor*/
 h2{
     margin-left: 10px;
     margin-top: -10px;
@@ -42,31 +104,7 @@ h2{
 
 }
 
-#adminHeader{
-    margin-right: 5px;
-    margin-top: -120px;
-    font-family: sans-serif;
-    background: linear-gradient(to bottom, darkgoldenrod, goldenrod);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    float: right;
-}
-
-.ah2{
-    text-decoration: none;
-    margin-right: 10px;
-    justify-content: left;
-    display:inline-block;
-    width:250px;
-}
-
-.body{
-    background-image: url("images/pexels-anna-shvets-4588013.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: 100% 100%;
-}
-
+/* Style for header2 class */
 .header2{
     margin-left: -8px;
     z-index: 10000;
@@ -78,36 +116,18 @@ h2{
     background-color: black;
 }
 
-header{
-    margin-left: -8px;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height:150px;
-    opacity: 85%;
-    z-index: -1;
-}
-
-#table{
-    display: table;
-    margin: 10px auto;
-}
-
-ul#horizontalList li{
-    display: inline;
-    padding-right: 50px;
-}
-
+/* style for every body */
 body{
     background: linear-gradient(90deg, #CDB7F6 , #FFEFFF, #B19CD9);
 }
 
+/* unordered list style */
 ul {
     list-style-type: none;
     text-align: center;
 }
+
+/*style for header anchor class*/
 .headerA{
     background: linear-gradient(to bottom, lightgray, white 35%);
     -webkit-text-fill-color: transparent;
@@ -118,34 +138,27 @@ ul {
     font-family: "Good boy", sans-serif;
 }
 
-.indexHeaderA{
-    background: linear-gradient(to bottom, lightgray, white 35%);
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
-    display: inline-block;
-    height: 80px;
-    font-size: 60px;
-    padding-right: 60px;
-    padding-top: 10px;
-    font-family: "Good boy", sans-serif;
-}
-
+/* list style */
 li{
     display: inline-block;
     padding-top: 15px;
     padding-right: 30px;
 }
+
+/* table style */
 table {
     margin-top: -90px;
     margin-left: auto;
     margin-right: auto;
 }
 
+/* style for all images in dog main */
 #dogs img{
     height: 410px;
     width: 270px;
 }
 
+/* style for title class on dogs page */
 .title{
     margin-top: 200px;
     margin-left: 100px;
@@ -154,6 +167,7 @@ table {
     font-family: cursive, "Brush Script MT";
 }
 
+/* style for flipping the dogs card */
 .flip-box {
     background-color: transparent;
     width: 270px;
@@ -194,30 +208,37 @@ table {
     transform: rotateY(180deg);
 }
 
+/* Akira card style */
 #Akira{
     background: linear-gradient(to right, cornflowerblue, deepskyblue, dodgerblue);
 }
 
+/* Doge card style */
 #Doge{
     background: linear-gradient(to right, darkgoldenrod, goldenrod, palegoldenrod);
 }
 
+/* Ava card style */
 #Ava{
     background: linear-gradient(to right, yellowgreen, greenyellow);
 }
 
+/* Snoopy card style */
 #Snoopy{
     background: linear-gradient(to right, red, tomato);
 }
 
+/* Daisy card style */
 #Daisy{
     background: linear-gradient(to left, hotpink, deeppink);
 }
 
+/* Ronnie card style */
 #Ronnie{
     background: linear-gradient(to right, orange, darkorange, sandybrown);
 }
 
+/* style for all p*/
 p{
     font-size: 20px;
     text-align: left;
@@ -225,125 +246,56 @@ p{
     color: white;
 }
 
+/* dog1 title text style */
 #dog1{
     -webkit-text-fill-color: goldenrod;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: darkgoldenrod;
-
 }
 
+/* dog2 title text style */
 #dog2{
     -webkit-text-fill-color: cornflowerblue;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: blue;
 }
 
+/* dog3 title text style */
 #dog3{
     -webkit-text-fill-color: orange;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: #c36b00;
-
 }
 
+/* dog4 title text style */
 #dog4{
     -webkit-text-fill-color: hotpink;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: deeppink;
-
 }
 
+/* dog5 title text style */
 #dog5{
     -webkit-text-fill-color: greenyellow;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: yellowgreen;
-
 }
 
+/* dog6 title text style */
 #dog6{
     -webkit-text-fill-color: red;
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: darkred;
-
 }
 
+/* style for buttons with bookingButton class */
 .bookingButton{
     margin-top: 20px;
     float: left;
     margin-left: 200px;
 }
 
-#companyInfo{
-    text-align: center;
-    margin-top: 50px;
-    margin-left: 100px;
-    margin-right: 100px;
-    font-size: 30px;
-    color: white;
-}
-
-#contactMain, #reviewMain, #bookingForm, #adminMain{
-    padding: 10px;
-    margin: 150px auto 10px  auto;
-    border: 2px solid white;
-    border-radius: 10px 10px 10px 10px;
-    background: linear-gradient(90deg, #CDB7F6, #B19CD9);
-    color: inherit;
-    width: 1250px;
-}
-
-.review-header{
-    color: white;
-    font-size: 40px;
-    margin-left: 25px;
-    margin-top: 50px;
-    margin-bottom: 0;
-}
-
-.review-author{
-    color: white;
-    margin-left: 45px;
-    font-size: 20px;
-    margin-top: 10px;
-}
-
-.review-description{
-    color: white;
-    margin-left: 25px;
-    font-size: 30px;
-    margin-top: 50px;
-    margin-bottom: 200px;
-}
-
-.contact-header{
-    color: white;
-    font-size: 40px;
-    margin-left: 100px;
-    margin-top: 50px;
-    margin-bottom: 0;
-}
-
-
-.locations{
-    margin-left: 150px;
-    color: white;
-    font-size: 30px;
-    width: max-content;
-}
-
-.park-locations{
-    margin-left: 150px;
-    color: white;
-    font-size: 30px;
-    width: max-content;
-}
-
-.track-locations{
-    margin-left: 150px;
-    color: white;
-    font-size: 30px;
-    width: max-content;
-}
-
+/* Style for my custom alert on dogs page*/
 #customAlert{
     position: fixed;
     top: 0;
@@ -370,20 +322,104 @@ p{
     padding: 5px;
 }
 
+/* Close button style*/
 #closeButton{
     margin-left: 400px;
     margin-top: 20px;
 }
 
+/* style for 2nd table on dogs page*/
 #table2{
     margin-top: 0;
     border-spacing: 100px;
 }
 
+/*date picker style*/
 #datepicker{
     margin-left: 50px;
 }
 
-div{
+/* Style for company info on contact page*/
+#companyInfo{
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 100px;
+    margin-right: 100px;
+    font-size: 30px;
+    color: white;
+}
+
+/* Style for mains and form (add boarder)*/
+#contactMain, #reviewMain, #bookingForm, #adminMain{
+    padding: 10px;
+    margin: 150px auto 10px  auto;
+    border: 2px solid white;
+    border-radius: 10px 10px 10px 10px;
+    background: linear-gradient(90deg, #CDB7F6, #B19CD9);
+    color: inherit;
+    width: 1250px;
+}
+
+/* Style for review header class*/
+.review-header{
+    color: white;
+    font-size: 40px;
+    margin-left: 25px;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
+/* Style for review author class*/
+.review-author{
+    color: white;
+    margin-left: 45px;
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+/* Style for review description class*/
+.review-description{
+    color: white;
+    margin-left: 25px;
+    font-size: 30px;
+    margin-top: 50px;
+    margin-bottom: 200px;
+}
+
+/* Style for contact header*/
+.contact-header{
+    color: white;
+    font-size: 40px;
+    margin-left: 100px;
+    margin-top: 50px;
+    margin-bottom: 0;
+}
+
+/* Style for locations on contact page */
+.locations{
+    margin-left: 150px;
+    color: white;
+    font-size: 30px;
+    width: max-content;
+}
+
+/* park locations style */
+.park-locations{
+    margin-left: 150px;
+    color: white;
+    font-size: 30px;
+    width: max-content;
+}
+
+/* track location style */
+.track-locations{
+    margin-left: 150px;
+    color: white;
+    font-size: 30px;
+    width: max-content;
+}
+
+/*div style on contact page*/
+#contactDiv{
     text-align: center;
 }
